Bug 167753 - Crash if I set the Slide Transition Modify Transition Variant to Top to Bottom
Summary: Crash if I set the Slide Transition Modify Transition Variant to Top to Bottom
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
: 167241 167925 168241 (view as bug list)
Depends on:
Blocks: Slide-Transitions
  Show dependency treegraph
 
Reported: 2025-07-31 23:26 UTC by rogershagawat
Modified: 2025-10-04 23:04 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rogershagawat 2025-07-31 23:26:45 UTC
Description:
In Impress setting the Slide Transition's Variant to Bottom to Top crashes Libre Office. I crashed modifying the Push transition to Bottom to Top. I recovered my presentation then tried to set the Wipe transition to Bottom to Top and crashed again.

Steps to Reproduce:
1. Create a Slide
2. Select slide transition side panel
3. Select Push or Wipe from list of slide transitions
4. Click the Variant drop down under Modify Transition
5. Click Top to Bottom from the list

Actual Results:
The Screen goes black, an icon in the bottom left of the slide view flashes rapidly, the icon looks like a black pause icon within a black circle within a white square. When clicking anywhere on the Impress window, the Window freezes, the icon stops flashing, the cursor stops blinking, and nothing is intractable.

Expected Results:
Play the modified transition from Bottom to Top


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 m_a_riosv 2025-08-01 09:29:29 UTC
It hangs, not exactly crash.
Reproducible
:
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
AND

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded


Latest version that works on the ones I have installed.
Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 2 Saburo 2025-08-03 02:25:36 UTC
bibisected with win64-25.2
commit e4a1c45a0bad3677d0b131ef9c6ac6e3c4bdb03c
author	Javiya Vivekkumar Dineshbhai <vivek.javiya@collabora.com>	Tue Jul 30 20:27:10 2024 +0200

slideshow: change transition drawing view to icon view
Comment 3 Saburo 2025-08-12 21:57:44 UTC
*** Bug 167925 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2025-09-02 08:53:57 UTC
*** Bug 167241 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2025-09-02 08:56:40 UTC
*** Bug 168241 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2025-09-03 09:07:55 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/654a6dd03dc687ddca67d09e69b3d47c32e7faeb

tdf#167753: Revert "slideshow: change transition drawing view to icon view"

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-09-03 11:00:11 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f162ca73db2d81e798020214eb0256bd055e98dc

tdf#167753: Revert "slideshow: change transition drawing view to icon view"

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2025-09-03 11:02:31 UTC
The problematic commit has been reverted in libreoffice-25-8 and libreoffice-25-2 branches so the problem is master only at the moment. Javiya plans to fix it in master instead of reverting it.
Comment 9 Commit Notification 2025-10-03 06:48:55 UTC
Rashesh Padia committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/51ac1a796b2f4bfbd0fa03d053e2f21973960337

tdf#167753: Fix infinite recursion in SlideTransitionPane focus handling

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Tomaz Vajngerl 2025-10-04 03:47:29 UTC
I think this was fixed with Rashesh's patch so I'll mark it as fixed, but it would be good to retest this. If it's confirmed fixed, we can then abandon [1]. 

[1] https://gerrit.libreoffice.org/c/core/+/190515
Comment 11 m_a_riosv 2025-10-04 23:04:13 UTC
Verified
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 05994b964bb8b3f6cf37548d36f0f8849797e450
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded