tdf#167753: Revert "slideshow: change transition drawing view to icon view"

This reverts commit e4a1c45a0bad3677d0b131ef9c6ac6e3c4bdb03c.

This patch also reverts a part of
commit 5c4fac1e9f50832852e87452f3152f01b905f9e6
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Wed Oct 16 13:19:05 2024 +0200

    loplugin:unusedmethods

since some methods are needed now

Change-Id: If2610349ac1aaecb03d1a2f1b6e3e8005c23eb77
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190538
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>